// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTimeView should render 1`] = `
<ViewLayout
  bodyElement={
    <div
      className="theme-body"
    >
      <div
        className="theme-date"
      >
        <Translate(CalendarGesture(DatePicker))
          allowFocus={true}
          calendar={
            Object {
              "monthIndex": 5,
              "year": 2006,
            }
          }
          goToNextMonth={[Function]}
          goToPreviousMonth={[Function]}
          onSelect={[MockFunction]}
        />
      </div>
      <div
        className="theme-time"
      >
        <Translate(TimePicker)
          allowFocus={true}
          onChange={[MockFunction]}
          value={
            Object {
              "hours": "15",
              "minutes": "45",
            }
          }
        />
      </div>
    </div>
  }
  header={
    Object {
      "leftElement": <Action
        aria-label="Go to previous month"
        icon="talend-chevron-left"
        label=""
        link={true}
        onClick={[Function]}
        tabIndex="-1"
      />,
      "middleElement": <Translate(HeaderTitle)
        button={
          Object {
            "aria-label": "Switch to month and year pickers view",
            "onClick": [MockFunction],
            "tabIndex": 0,
          }
        }
        monthIndex={5}
        year={2006}
      />,
      "rightElement": <Action
        aria-label="Go to next month"
        icon="talend-chevron-left"
        iconTransform="rotate-180"
        label=""
        link={true}
        onClick={[Function]}
        tabIndex="-1"
      />,
    }
  }
/>
`;

exports[`DateTimeView should render without timePicker 1`] = `
<ViewLayout
  bodyElement={
    <div
      className="theme-body"
    >
      <div
        className="theme-date"
      >
        <Translate(CalendarGesture(DatePicker))
          allowFocus={true}
          calendar={
            Object {
              "monthIndex": 5,
              "year": 2006,
            }
          }
          goToNextMonth={[Function]}
          goToPreviousMonth={[Function]}
          onSelect={[MockFunction]}
        />
      </div>
    </div>
  }
  header={
    Object {
      "leftElement": <Action
        aria-label="Go to previous month"
        icon="talend-chevron-left"
        label=""
        link={true}
        onClick={[Function]}
        tabIndex="-1"
      />,
      "middleElement": <Translate(HeaderTitle)
        button={
          Object {
            "aria-label": "Switch to month and year pickers view",
            "onClick": [MockFunction],
            "tabIndex": 0,
          }
        }
        monthIndex={5}
        year={2006}
      />,
      "rightElement": <Action
        aria-label="Go to next month"
        icon="talend-chevron-left"
        iconTransform="rotate-180"
        label=""
        link={true}
        onClick={[Function]}
        tabIndex="-1"
      />,
    }
  }
/>
`;
